# Customer-Behavior-Analysis

./: .gitignore  LICENSE  README.md  environment.yml  plan.md  pyproject.toml  requirements.txt
config/: settings.yaml
dashboard/: app.py  components.py
dashboard/pages/: 1_RFM_Distribution.py  2_Segment_Profiling.py  3_Segment_Drilldown.py  4_Market_Basket.py  4_Methodology.py  5_Methodology.py
docs/: data_dictionary.md
notebooks/: 01_data_ingestion.ipynb  02_eda.ipynb  03_rfm_analysis.ipynb  04_kmeans_segmentation.ipynb  05_segment_profiling.ipynb  06_market_basket.ipynb
reports/tables/: 02_country_distribution.csv  02_data_quality.csv  02_top20_quantity.csv  02_top20_revenue.csv  04_cluster_profile.csv  04_k_metrics.csv  04_kmeans_vs_traditional.csv  05_kmeans_vs_quintile_counts.csv  05_segment_summary.csv  05_top_products_per_segment.csv  06_top50_rules.csv
scripts/: run_pipeline.py
src/: basket.py  config.py  data.py  io_utils.py  rfm.py  segmentation.py  viz.py
tests/: test_data.py  test_rfm.py  test_segmentation.py
