[project]
name = "customer-behavior-analysis"
version = "0.1.0"
description = "Master's dissertation — customer behavior analysis on UCI Online Retail II"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lupse Cristian" }]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
